--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ name = "pypi"
 django = "*"
 django-storages = "*"
 "psycopg2" = "*"
+django-heroku = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.6"
