Change pyscopg2 to psycopg2-binary

--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,9 @@ name = "pypi"
 [packages]
 django = "*"
 django-storages = "*"
-"psycopg2" = "*"
 django-heroku = "*"
 gunicorn = "*"
+"psycopg2-binary" = "*"
 
 [requires]
 python_version = "3.6"
