--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-storages = "*"
 django-heroku = "*"
 gunicorn = "*"
 "psycopg2-binary" = "*"
+"boto3" = "*"
 
 [requires]
 python_version = "3.6"
