--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-heroku = "*"
 gunicorn = "*"
 "psycopg2-binary" = "*"
 "boto3" = "*"
+selenium = "==3.4.1"
 
 [requires]
 python_version = "3.6"
