--- a/Pipfile
+++ b/Pipfile
@@ -12,8 +12,9 @@ django-storages = "*"
 django-heroku = "*"
 gunicorn = "*"
 "psycopg2-binary" = "*"
-"boto3" = "*"
 xlsxwriter = "*"
+django-webpush = "*"
+"boto3" = "*"
 
 [requires]
 python_version = "3.6"
