--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "SGRD",
   "description": "Sistema de gestion de rescursos digitales",
+  "repository": "https://github.com/DiegoRBaquero/proyecto-agiles",
   "website": "https://proyecto-agiles.herokuapp.com/",
   "success_url": "/",
   "addons": [
@@ -24,17 +25,12 @@
       "description": "Nombre del bucket de S3",
       "value": "agiles-media"
     },
-    "DATABASE_URL": {
-      "description": "URL de la base de datos con usuario, contraseña, host, puerto y nombre de DB",
-      "value": "",
-      "required": false
-    },
     "DISABLE_COLLECTSTATIC": {
       "description": "Setting de Python para no pasar archivos estáticos a S3",
       "value": "1"
     }
   },
   "scripts": {
-    "postdeploy": "python manage.py migrate"
+    "postdeploy": "python manage.py migrate --noinput"
   }
 }
